movin forward with splitting treatments

--- a/steal_or_trust/templates/steal_or_trust/Intro.html
+++ b/steal_or_trust/templates/steal_or_trust/Intro.html
@@ -2,12 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Results
+    Instructions
 {% endblock %}
 
 {% block content %}
-
+{%  include instructions %}
     {% next_button %}
+
 {% endblock %}
-
-
