--- a/steal_or_trust/templates/steal_or_trust/BeliefElicitation.html
+++ b/steal_or_trust/templates/steal_or_trust/BeliefElicitation.html
@@ -2,12 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Results
+    Belief elicitation
 {% endblock %}
 
 {% block content %}
-
+    {% formfields %}
     {% next_button %}
+    {% include belief_instructions %}
 {% endblock %}
-
-
