--- a/steal_or_trust/templates/steal_or_trust/BeliefIntro.html
+++ b/steal_or_trust/templates/steal_or_trust/BeliefIntro.html
@@ -2,12 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Results
+    Belief elicitation: Instructions
 {% endblock %}
 
 {% block content %}
-
+    {% include belief_instructions %}
     {% next_button %}
+
 {% endblock %}
-
-
