--- a/steal_or_trust/templates/steal_or_trust/ReceiverDecision.html
+++ b/steal_or_trust/templates/steal_or_trust/ReceiverDecision.html
@@ -2,12 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Results
+    Participant B decision
 {% endblock %}
 
 {% block content %}
-
+    {% formfields %}
     {% next_button %}
+    {% include instructions %}
 {% endblock %}
-
-
